src/decimals/snapshots/freya_ob__decimals__fixed_decimal__tests__min_notional.snap
---
source: src/decimals/fixed_decimal.rs
expression: total_value
---
FixedDecimal {
    raw: 500000,
}
