src/decimals/snapshots/freya_ob__decimals__fixed_decimal__tests__negative_remainder-2.snap
---
source: src/decimals/fixed_decimal.rs
expression: a % b
---
FixedDecimal {
    raw: 15000000000000,
}
